--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/GEEKGEEKOP/ai#readme",
   "dependencies": {
+    "minecraft-data": "^3.84.1",
     "mineflayer": "^4.26.0",
+    "mineflayer-collectblock": "^1.6.0",
     "mineflayer-pathfinder": "^2.4.5",
     "vec3": "^0.1.10"
   }
